<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Forex Economic Calendar</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_exception_view">ExceptionViewActivity</string>
    <string name="title_activity_ads">AdsActivity</string>

    <string name="project_id">68799674065</string>
    <string name="google_android_key">AIzaSyBAVZziMJqdnUTKUQQWDRWIlWlweCMfo</string>

    <string name="interstitial_ad_unit_id">ca-app-pub-9791333995328738/8498834803</string>
    <string name="App_ID">ca-app-pub-9791333995328738~4068635207</string>

    <string name="Today">Today</string>
    <string name="Tomorrow">Tomorrow</string>
    <string name="This_Week">This Week</string>
    <string name="By_Date">By Date</string>
    <string name="Setting">Settings</string>
    <string name="Invite_Friends">Invite Friends</string>
    <string name="Send_Feedback">Send Feedback</string>
    <string name="Rate_Us">Rate Us</string>
    <string name="More">More</string>
    <string name="Notificatoin">Notificatoin</string>
    <string name="Symbols">Symbols</string>
    <string name="Impact">Impact</string>
    <string name="Local_Time">Local Time</string>
    <string name="Ad_Show">Ad Show</string>
    <string name="Language">Language</string>
    <string name="Cancel">Cancel</string>
    <string name="Set">Set</string>
    <string name="My_Fx">My Fx</string>
    <string name="OK">OK</string>
    <string name="Turn_on_ads">Ad Show Justification</string>
    <string name="Feedback">Feedback</string>
    <string name="Send">Send</string>
    <string name="Input_name">Your name</string>
    <string name="Input_feedback">Feedback</string>
    <string name="Email">Email</string>
    <string name="Type">Type</string>
    <string name="ads_show_description">ads_show_description</string>
    <string name="loading_description">loading_description</string>
    <string name="notification_select_description">ads_show_description</string>
    <string name="impact_select_discription">impact_select_discription</string>
    <string name="symbol_select_discription">symbol_select_discription</string>
    <string name="feedback_discription">Send feedback description</string>

    <string name="Low">Low</string>
    <string name="Medium">Medium</string>
    <string name="High">High</string>
    <string name="Invalid_Email">Invalid email</string>
    <string name="Feedback_sent_successfully">Feedback sent successfully</string>
    <string name="Desabled_alarm">Desabled alarm</string>
    <string name="Enabled_alarm">Enabled alarm</string>
    <string name="Tentative">Tentative</string>
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <!--<string name=""></string>-->
    <string name="English">English</string>
    <string name="Chinese">Chinese</string>
    <string name="Japanese">Japanese</string>
    <string name="Spanish">Spanish</string>

    <string-array name="notification_times">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>

    </string-array>
    <string-array name="symbols">
        <item>AUD</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>JPY</item>
        <item>NZD</item>
        <item>USD</item>
    </string-array>
    <string-array name="impacts">
        <item>Non-E</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>

    </string-array>
    <string-array name="languages">
        <item>English</item>
        <item>Persian</item>

        <!--<item>Chinese</item>-->
        <!--<item>Japanese</item>-->
        <!--<item>Spanish</item>-->
    </string-array>

    <string-array name="type">
        <item>Bug report</item>
        <item>Ask and question</item>
        <item>Idea</item>
    </string-array>










</resources>





