<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/transparent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dlg_header"
            android:padding="@dimen/dimen_8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Send_Feedback"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_22sp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_dlg_descrption"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_discription"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_18sp"

                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:layout_toLeftOf="@+id/cb_all"
                    />

            </RelativeLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="@dimen/dimen_20dp">
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:hint="@string/Input_name"
                android:background="@color/transparent"
                android:maxLength="50"
                android:singleLine="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"/>
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:hint="@string/Email"
                android:background="@color/transparent"
                android:maxLength="50"
                android:inputType="textEmailAddress"
                android:singleLine="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"/>
            <Spinner
                android:id="@+id/sp_type"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@color/transparent"
                android:hint="@string/Type"
                android:singleLine="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"/>
            <EditText
                android:id="@+id/et_feedback"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:maxLength="1000"
                android:background="@color/transparent"
                android:hint="@string/Input_feedback"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/dlg_footer"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_dlg_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Cancel"
                android:textColor="@color/white"
                android:background="@color/transparent"
                />
            <Button
                android:id="@+id/btn_dlg_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Send"
                android:textColor="@color/white"
                android:background="@color/transparent"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
