<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@color/transparent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dlg_header"
            android:padding="@dimen/dimen_8dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_dlg_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Notificatoin"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_22sp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_dlg_descrption"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Sample Description"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_18sp"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    android:layout_toLeftOf="@+id/cb_all"
                    />
                <CheckBox
                    android:id="@+id/cb_all"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_alignParentRight="true"
                    android:theme="@style/GreenCheck"
                    android:visibility="gone"

                    />
            </RelativeLayout>

        </LinearLayout>
        <ListView
            android:id="@+id/lv_dlg"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@color/white"
            android:dividerHeight="0dp">

        </ListView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/dlg_footer"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_dlg_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Cancel"
                android:textColor="@color/white"
                android:background="@color/transparent"
                />
            <Button
                android:id="@+id/btn_dlg_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Set"
                android:textColor="@color/white"
                android:background="@color/transparent"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
